--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "querystring": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "request": "^2.88.2",
